--- a/package.json
+++ b/package.json
@@ -19,21 +19,20 @@
     "react-dom": "^18.3.1"
   },
   "devDependencies": {
-    "eslint": "^9.0.0",
+    "eslint": "^9.39.2",
     "@types/node": "25.0.3",
     "@types/react": "19.2.7",
     "autoprefixer": "^10.4.19",
-    "eslint": "^9.39.2",
     "postcss": "^8.4.38",
     "tailwindcss": "^3.4.1",
-    "typescript": "5.9.3"
+    "typescript": "5.9.3",
+    "prisma": "^5.8.0",
+    "ts-node": "^10.9.2"
+  },
+  "prisma": {
+    "seed": "ts-node prisma/seed.ts"
   },
   "engines": {
     "node": ">=20.9.0"
-  }
-}
-{
-  "prisma": {
-    "seed": "ts-node prisma/seed.ts"
   }
 }
