Task 2A: Core Platform Foundation – DAL, Prisma schema, dashboards skeleton, middleware, seed

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-DATABASE_URL=
-NEXTAUTH_SECRET=
-NEXTAUTH_URL=
-NODE_ENV=production
+DATABASE_URL="postgresql://user:password@localhost:5432/dbname?sslmode=disable"
+NEXTAUTH_SECRET="dev_secret_key"
+NEXTAUTH_URL="http://localhost:3000"
+NODE_ENV=development
