--- a/package.json
+++ b/package.json
@@ -14,20 +14,23 @@
     "url": "git+https://github.com/Esmail2004r/mehr-platform-web.git"
   },
   "dependencies": {
+    "@prisma/client": "^7.2.0",
+    "bcryptjs": "^3.0.3",
     "next": "^16.1.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
   "devDependencies": {
-    "eslint": "^9.39.2",
+    "@types/bcryptjs": "^2.4.6",
     "@types/node": "25.0.3",
     "@types/react": "19.2.7",
     "autoprefixer": "^10.4.19",
+    "eslint": "^9.39.2",
     "postcss": "^8.4.38",
-    "tailwindcss": "^3.4.1",
-    "typescript": "5.9.3",
     "prisma": "^5.8.0",
-    "ts-node": "^10.9.2"
+    "tailwindcss": "^3.4.1",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.9.3"
   },
   "prisma": {
     "seed": "ts-node prisma/seed.ts"
