Change DATABASE_URL to Supabase configuration
Updated DATABASE_URL for Supabase connection.

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-DATABASE_URL="postgresql://user:password@localhost:5432/dbname?sslmode=disable"
+DATABASE_URL="postgresql://postgres.axejhzwbupvrxhbbifdx:esmailazab13579Es@@aws-1-eu-west-3.pooler.supabase.com:6543/postgres?pgbouncer=true"
 NEXTAUTH_SECRET="dev_secret_key"
 NEXTAUTH_URL="http://localhost:3000"
 NODE_ENV=development
